# aoc-2024

./: CMakeLists.txt  README.md
Day01/: CMakeVars.txt  Day01.cxx  Day01.h  Day01_main.cxx  Day01_tests.cxx
Day02/: CMakeVars.txt  Day02.cxx  Day02.h  Day02_main.cxx  Day02_tests.cxx
Day03/: CMakeVars.txt  Day03.cxx  Day03.h  Day03_main.cxx  Day03_tests.cxx
Day04/: CMakeVars.txt  Day04.cxx  Day04.h  Day04_main.cxx  Day04_tests.cxx
Day05/: CMakeVars.txt  Day05.cxx  Day05.h  Day05_main.cxx  Day05_tests.cxx
Day06/: CMakeVars.txt  Day06.cxx  Day06.h  Day06_main.cxx  Day06_tests.cxx
Day07/: CMakeVars.txt  Day07.cxx  Day07.h  Day07_main.cxx  Day07_tests.cxx
Day08/: CMakeVars.txt  Day08.cxx  Day08.h  Day08_main.cxx  Day08_tests.cxx
Day09/: CMakeVars.txt  Day09.cxx  Day09.h  Day09_main.cxx  Day09_tests.cxx
Day10/: CMakeVars.txt  Day10.cxx  Day10.h  Day10_main.cxx  Day10_tests.cxx
Day11/: CMakeVars.txt  Day11.cxx  Day11.h  Day11_main.cxx  Day11_tests.cxx
Day12/: CMakeVars.txt  Day12.cxx  Day12.h  Day12_main.cxx  Day12_tests.cxx
Day13/: CMakeVars.txt  Day13.cxx  Day13.h  Day13_main.cxx  Day13_tests.cxx
Day14/: CMakeVars.txt  Day14.cxx  Day14.h  Day14_main.cxx  Day14_tests.cxx
Day15/: CMakeVars.txt  Day15.cxx  Day15.h  Day15_main.cxx  Day15_tests.cxx
Day16/: CMakeLists.txt  CMakeVars.txt  Day16.cxx  Day16.h  Day16_main.cxx  Day16_tests.cxx
Day17/: CMakeVars.txt  Day17.cxx  Day17.h  Day17_main.cxx  Day17_tests.cxx
Day18/: CMakeLists.txt  CMakeVars.txt  Day18.cxx  Day18.h  Day18_main.cxx  Day18_tests.cxx
